--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-interactions": "^8.0.10",
     "@storybook/addon-links": "^8.0.10",
     "@storybook/addon-onboarding": "^8.0.10",
+    "@storybook/addon-themes": "^8.0.10",
     "@storybook/blocks": "^8.0.10",
     "@storybook/react": "^8.0.10",
     "@storybook/react-vite": "^8.0.10",
@@ -45,6 +46,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
     "storybook": "^8.0.10",
+    "storybook-dark-mode": "^4.0.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
